--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.wrapper {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  min-height: 100vh;
+  transition: background-color 0.15s ease-in-out;
 }
 
-.App-link {
-  color: #61dafb;
+#quote-box {
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  width: 35%;
+  padding: 16px;
+  border-radius: 5px;
+  background-color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.quote-text {
+  transition: background-color 0.15s ease-in-out, opacity 0.15s ease-in-out;
+}
+
+#text {
+  font-family: "PT Sans", sans-serif;
+  font-size: 1.5rem;
+}
+
+#author {
+  font-family: "EB Garamond", serif;
+  text-align: right;
+}
+
+.card-controls {
+  display: flex;
+  justify-content: space-between;
+}
+
+#tweet-quote,
+#new-quote {
+  padding: 8px 12px 8px 12px;
+  color: #fff;
+  border-radius: 5px;
+  transition: background-color 0.15s ease-in-out;
+}
+
+#tweet-quote:hover,
+#new-quote:hover {
+  opacity: 0.9;
+  cursor: pointer;
+}
+
+#new-quote {
+  border-width: 0;
 }
